
syntax = "proto3";


// the pb package
package toy.temporal.api.workflow;

option go_package = "github.com/maki3cat/toy-temporal/api-go/workflow;workflow";
option java_package = "io.maki.toy.temporal.api";
option java_multiple_files = true;
option java_outer_classname = "MessageProto";


service Workflow {
  // state
  rpc StartWorkflowExecution (StartWorkflowExecutionRequest) returns (StartWorkflowExecutionResponse) {}

  // queue
  rpc PollWorkflowTask (PollWorkflowTaskRequest) returns (PollWorkflowTaskResponse) {}
}

message StartWorkflowExecutionRequest {
  string execution_id = 1;
  string payload = 2;
}

message StartWorkflowExecutionResponse {
  string run_id = 1;
}


message PollWorkflowTaskRequest{
  string worker_id = 1;
}

message PollWorkflowTaskResponse{
  string run_id = 1;
  string task_id = 2;
  string payload = 3;
}
